--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -9,7 +9,7 @@
     <body>
         
         <header>
-            <a href="@routes.Projects.index" id="logo"><span>Zen</span>tasks</a>
+            <a href="@routes.Application.index" id="logo"><span>Zen</span>tasks</a>
         </header>
         
         @helper.form(routes.Application.authenticate) {
