--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,41 +1,71 @@
-@(projects: List[Project], user: User)(body: Html)
+@(title: String)(content: Html)
 
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
-        <title>Zentasks</title>
+        <meta charset="utf-8">
+        <title>@title</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
-        <script type="text/javascript" src="@routes.Assets.at("javascripts/jquery-1.7.1.js")"></script>
-        <script type="text/javascript" src="@routes.Assets.at("javascripts/jquery-play-1.7.1.js")"></script>
-        <script type="text/javascript" src="@routes.Assets.at("javascripts/underscore-min.js")"></script>
-        <script type="text/javascript" src="@routes.Assets.at("javascripts/backbone-min.js")"></script>
-        <script type="text/javascript" src="@routes.Assets.at("javascripts/main.js")"></script>
-        <script type="text/javascript" src="@routes.Application.javascriptRoutes"></script>
+        <script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
+        <!--Twitter Bootstrap-->
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.min.css")" />
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/responsive.min.css")" />
+        <script src="@routes.Assets.at("javascripts/bootstrap.min.js")" type="text/javascript"></script>
+        <style type="text/css">
+body {
+	padding-top: 60px;
+	padding-bottom: 40px;
+}
+
+img {
+padding: 20px;
+}
+
+</style>
     </head>
+    
     <body>
-        <header>
-            <a href="@routes.Projects.index" id="logo"><span>Zen</span>tasks</a>
-            <dl id="user">
-                <dt>@user.name <span>(@user.email)</span></dt>
-                <dd>
-                    <a href="@routes.Application.logout()">Logout</a>
-                </dd>
-            </dl>
-        </header>
-        <nav>
-            <h4 class="dashboard"><a href="#/">Dashboard</a></h4>
-            <ul id="projects">
-                @projects.groupBy(_.folder).map {
-                    case (group, projects) => {
-                        @views.html.projects.group(group, projects)
-                    }
-                }
+    
+        <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+          <a class="brand" href="/">Flavour of the Month</a>
+          <div class="nav-collapse">
+            <ul class="nav">
+              <li><a href="@routes.Application.index()">Home</a></li>
+              <li><a href="@routes.Application.myProfile()">Profile</a></li>
+              <li><a href="">View Matches</a></li>
+              <li><a href="@routes.Application.requests()">Requests</a></li>
+              <li><a href="@routes.Application.vote()">Vote</a></li>
+              <li><a href="@routes.Application.chat()">Chat</a></li>
+              <li><a href="#">Sign up</a></li>
+              <li><a href="@routes.Application.login()">Login</a></li>
             </ul>
-            <button id="newGroup">New group</button>
-        </nav>
-        <section id="main">
-            @body
-        </section>
+          </div><!--/.nav-collapse -->
+        </div>
+      </div>
+    </div>
+    
+    <div class="container">
+        @content
+    </div>
+    
+<footer class="footer" id="foot">
+	<div class="container">
+	  <p class="pull-right">
+	  <a href="#">Back to top</a>
+	  <p>	
+	  <a href="@routes.InfoPages.about()">About</a> - 
+	  <a href="@routes.InfoPages.contact()">Contact</a> 
+	</div>
+</footer>
+    
     </body>
 </html>
-
