updated Matches view

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -41,7 +41,7 @@ padding: 20px;
             <ul class="nav">
               <li><a href="@routes.Application.index()">Home</a></li>
               <li><a href="@routes.Application.myProfile()">Profile</a></li>
-              <li><a href="">View Matches</a></li>
+              <li><a href="@routes.Application.getMatches()">View Matches</a></li>
               <li><a href="@routes.Application.requests()">Requests</a></li>
               <li><a href="@routes.Application.vote()">Vote</a></li>
               <li><a href="@routes.Application.chat()">Chat</a></li>
