--- a/app/views/viewMatches.scala.html
+++ b/app/views/viewMatches.scala.html
@@ -1,4 +1,4 @@
-@(message: String)
+@(users: List[User])
 <!--(matches: List[match]) -->
 @main("Flavour of the Month") {
 <style type="text/css">
@@ -26,8 +26,14 @@
 </div>
 
 <div id="matches" class="row-fluid">
-<div class="span5 offset1">
-</div>
+
+	@for(user <- users){
+	<div class="span5 offset 1">
+		<p>@user.toString()</p>
+		<img src="http://thecontentwrangler.com/wp-content/uploads/2011/08/User.png" width=100 />
+		<button id="button" type=submit class="btn btn-info">Vote!</button>
+	</div>
+	}
 </div>
 
 <br>
