--- a/app/views/vote.scala.html
+++ b/app/views/vote.scala.html
@@ -10,10 +10,12 @@
 
 <div class="row-fluid">
 	@for(user <- users){
-	<div class="span4">
-		<p>@user.toString()</p>
+	<div class="span3">
+		<center>
+		<p>@user.name</p>
 		<img src="http://thecontentwrangler.com/wp-content/uploads/2011/08/User.png" width=100 />
-		<button id="button" type=submit class="btn btn-info">Vote!</button>
+		<p><button id="button" type=submit class="btn btn-info">Vote!</button></p>
+		</center>
 	</div>
 	}
 </div>
