improved vote, request views

--- a/app/views/requests.scala.html
+++ b/app/views/requests.scala.html
@@ -4,7 +4,7 @@
 <h1>Requests Page</h1>
 
 <div class="hero-unit">
-	<h2>Accept Requests</h2>
+	<h2>Accept/Reject Requests</h2>
 	<p>The following people have sent you a request. You can choose to
 		accept or reject their request.</p>
 	<div class="row">
@@ -12,9 +12,8 @@
 
 		<center>
 			<div class="span4">
-				<h2>Flavour of the month</h2>
-				<p>The monthly theme adds an element of fun and keeps users
-					active.</p>
+				<h2>@user.name</h2>
+				<img src = "http://thecontentwrangler.com/wp-content/uploads/2011/08/User.png" width = 150>
 				<div class="btn-group">
 					<a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
 						Respond to request <span class="caret"></span>
