--- a/app/views/myProfile.scala.html
+++ b/app/views/myProfile.scala.html
@@ -1,4 +1,5 @@
-@(message: String) @main("Flavour of the Month") {
+@(user: User) 
+@main("Flavour of the Month") {
 
 <!-- Main hero unit for a primary marketing message or call to action -->
 <div>
@@ -14,7 +15,7 @@
 				<center>
 					<img
 						src="http://thecontentwrangler.com/wp-content/uploads/2011/08/User.png">
-					<h3>Username</h3>
+					<h3>@user.name</h3>
 				</center>
 			</div>
 
