Added new signup page

--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -19,7 +19,7 @@
              
             
 
-<p>If you don't have an account, <a href="/signup">Register Here</a>.</p>
+<p>If you don't have an account, <a href="@routes.Application.signup()">Register Here</a>.</p>
 <form accept-charset="UTF-8" action="/sessions" class="form-stacked" method="post"><div style="margin:0;padding:0;display:inline"><input name="utf8" value="✓" type="hidden"><input name="authenticity_token" value="5Cua4BQodZhG4ITApsnttGXKFTjj5s5hzamOlvxxM8Q=" type="hidden"></div>  
 <fieldset>	
 	
