--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -45,7 +45,7 @@ padding: 20px;
               <li><a href="@routes.Application.requests()">Requests</a></li>
               <li><a href="@routes.Application.vote()">Vote</a></li>
               <li><a href="@routes.Application.chat()">Chat</a></li>
-              <li><a href="#">Sign up</a></li>
+              <li><a href="@routes.Application.signup()">Sign up</a></li>
               <li><a href="@routes.Application.login()">Login</a></li>
             </ul>
           </div><!--/.nav-collapse -->
