changed theme banner.

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -19,10 +19,6 @@ body {
 	padding-bottom: 40px;
 }
 
-img {
-padding: 20px;
-}
-
 </style>
     </head>
     
@@ -49,6 +45,8 @@ padding: 20px;
               <li><a href="@routes.Application.login()">Login</a></li>
             </ul>
           </div><!--/.nav-collapse -->
+          <div>
+</div>
         </div>
       </div>
     </div>
