--- a/app/views/myProfile.scala.html
+++ b/app/views/myProfile.scala.html
@@ -1,5 +1,4 @@
-@(user: User) 
-@main("Flavour of the Month") {
+@(user: User) @main("Flavour of the Month") {
 
 <!-- Main hero unit for a primary marketing message or call to action -->
 <div>
@@ -11,7 +10,7 @@
 		<br>
 		<div class="row-fluid">
 
-			<div class="span4">
+			<div class="span4 offset1">
 				<center>
 					<img
 						src="http://thecontentwrangler.com/wp-content/uploads/2011/08/User.png">
@@ -19,40 +18,46 @@
 				</center>
 			</div>
 
-			<div class="span5 offset2">
+			<div class="span5 offset1">
 				<h2>About myself</h2>
 				<p>I am a person who likes sports, likes to read. I spent my
 					weekends helping out at the Salvation Army. I also go on overseas
 					volunteer trips to different countries to help people in need. When
 					I am not helping others, I spend my free time at home reading books
 					of various genres.</p>
-					<a href="#" class="pull-right">edit my profile</a>
+				<a href="#" class="pull-right">edit my profile</a>
 			</div>
 
 		</div>
-		
-		<table class="table table-bordered table-hover table-striped">
-			<tr id="Gender" class="info">
-				<td>Gender</td>
-				<td>Male</td>
-			</tr>
 
-			<tr id="Age" class="info">
-				<td>Age</td>
-				<td>25</td>
-			</tr>
+		<div class="container">
+			<center>
+			<div class="span8 offset1">
+				<table class="table table-bordered table-hover table-striped">
+					<tr id="Gender" class="info">
+						<td>Gender</td>
+						<td>Male</td>
+					</tr>
 
-			<tr id="Location" class="info">
-				<td>Location</td>
-				<td>Georgia, Atlanta</td>
-			</tr>
+					<tr id="Age" class="info">
+						<td>Age</td>
+						<td>25</td>
+					</tr>
 
-			<tr id="Occupation" class="info">
-				<td>Occupation</td>
-				<td>Self-employed</td>
-			</tr>
+					<tr id="Location" class="info">
+						<td>Location</td>
+						<td>Georgia, Atlanta</td>
+					</tr>
 
-		</table>
+					<tr id="Occupation" class="info">
+						<td>Occupation</td>
+						<td>Self-employed</td>
+					</tr>
+
+				</table>
+			</div>
+			</center>
+		</div>
 	</div>
 
 	}
