--- a/app/views/viewMatches.scala.html
+++ b/app/views/viewMatches.scala.html
@@ -1,5 +1,4 @@
-@(users: List[User])
-@main("Flavour of the Month") {
+@(users: List[User]) @main("Flavour of the Month") {
 <style type="text/css">
 #matches {
 	margin: auto;
@@ -18,18 +17,30 @@
 </div>
 
 
-
-<div class="row-fluid">
-	@for(user <- users){
-	<div class="span5 offset1" id = "matches">
-		<center>
-		<img src="http://thecontentwrangler.com/wp-content/uploads/2011/08/User.png" width=100 />
-		<p><button id="button" type=submit class="btn btn-info">Request to Chat with @user.name</button></p>
-		</center>
+<div class="container">
+<center>
+	<div class="row">
+		<div class="span10 offset2">
+			<div class="row">
+				@for(user <- users){
+					<div class="span2" id="matches">
+						<center>
+							<img
+								src="http://www.clker.com/cliparts/b/1/f/a/1195445301811339265dagobert83_female_user_icon.svg.med.png"
+								width=150 />
+							<h4></h4>
+							<button id="button" type=submit class="btn btn-primary btn-small">
+								Chat with
+								<h5>@user.name</h5>
+							</button>
+						</center>
+					</div>
+				}
+			</div>
+		</div>
 	</div>
-	}
+	</center>
 </div>
-
 
 <br>
 }
