--- a/app/views/vote.scala.html
+++ b/app/views/vote.scala.html
@@ -8,31 +8,32 @@
 		stand out from the rest. Choose from: "Nice Pose", "Adventurous" and
 		"Creativity Overflow".</p>
 </div>
+<div class="container">
+	<div class="row">
+		<div class="span10 offset1">
+			<div class="row">
+				@for(user <- users){
+				<center>
+					<div class="span2">
+						<img
+							src="http://www.clker.com/cliparts/b/1/f/a/1195445301811339265dagobert83_female_user_icon.svg.med.png"
+							width=70 /> <br> @user.name
+						<div class="btn-toolbar">
+							<div class="btn-group">
+								<button class="btn btn-mini">NP</button>
 
-<div class="row-fluid">
-	@for(user <- users){
-	<div class="span3">
-		<center>
-			<p>@user.name</p>
-			<img
-				src="http://thecontentwrangler.com/wp-content/uploads/2011/08/User.png"
-				width=80 />
-			<p>
-			<div class="btn-toolbar">
-				<div class="btn-group">
-					<button class="btn btn-mini"> Nice Pose
-					<i class="icon-thumbs-up"></i></button>
-					
-					<button class="btn btn-mini">Adventurous
-					<i class="icon-thumbs-up"></i></button>
-					
-					<button class="btn btn-mini">Creativity Overflow
-					<i class="icon-thumbs-up"></i></button>
-				</div>
+								<button class="btn btn-mini">A</button>
+
+								<button class="btn btn-mini">C</button>
+								<i class="icon-search"></i>
+							</div>
+						</div>
+
+					</div>
+				</center>
+				}
 			</div>
-			</p>
-		</center>
+		</div>
 	</div>
-	}
 </div>
 }
