updated vote view to accept user image

--- a/app/views/vote.scala.html
+++ b/app/views/vote.scala.html
@@ -4,9 +4,22 @@
 
 <div class="hero-unit">
 	<h2>Vote for other users</h2>
-	<p>Look at other users' profile pictures and vote for those that
-		stand out from the rest. Choose from: "Nice Pose", "Adventurous" and
-		"Creativity Overflow".</p>
+	<p>
+		Look at other users' profile pictures and vote for those that stand
+		out from the rest. Choose from: Professional Model
+		<img
+			src="http://openclipart.org/people/Gerald_G/Gerald_G_Yoga_Poses_(stylized).svg"
+			width="40">
+		, Red Hot
+		<img
+			src="http://investmentnewsnow.com/wp-content/uploads/2012/05/hot-icon.gif"
+			width="60"> 
+		and
+		Creativity Overflow 
+		<img
+			src="http://www.vectorstock.com/i/composite/06,57/idea-and-creative-abstract-human-icon-vector-790657.jpg"
+			width="50">.
+	</p>
 </div>
 <div class="container">
 	<div class="row">
@@ -16,15 +29,27 @@
 				<center>
 					<div class="span2">
 						<img
-							src="http://www.clker.com/cliparts/b/1/f/a/1195445301811339265dagobert83_female_user_icon.svg.med.png"
+							src="@user.image"
 							width=70 /> <br> @user.name
 						<div class="btn-toolbar">
 							<div class="btn-group">
-								<button class="btn btn-mini">NP</button>
+								<button class="btn btn-mini">
+									<img
+										src="http://openclipart.org/people/Gerald_G/Gerald_G_Yoga_Poses_(stylized).svg"
+										width="20">
+								</button>
 
-								<button class="btn btn-mini">A</button>
+								<button class="btn btn-mini">
+									<img
+										src="http://investmentnewsnow.com/wp-content/uploads/2012/05/hot-icon.gif"
+										width="28">
+								</button>
 
-								<button class="btn btn-mini">C</button>
+								<button class="btn btn-mini">
+									<img
+										src="http://www.vectorstock.com/i/composite/06,57/idea-and-creative-abstract-human-icon-vector-790657.jpg"
+										width="22">
+								</button>
 								<i class="icon-search"></i>
 							</div>
 						</div>
