edited badges for vote view

--- a/app/views/myProfile.scala.html
+++ b/app/views/myProfile.scala.html
@@ -13,7 +13,7 @@
 			<div class="span4 offset1">
 				<center>
 					<img
-						src="http://thecontentwrangler.com/wp-content/uploads/2011/08/User.png">
+						src=@user.image>
 					<h3>@user.name</h3>
 				</center>
 			</div>
