--- a/app/views/requests.scala.html
+++ b/app/views/requests.scala.html
@@ -14,7 +14,7 @@
 				<div class="span2 offset1">
 					<center>
 						<img
-							src="http://www.clker.com/cliparts/b/1/f/a/1195445301811339265dagobert83_female_user_icon.svg.med.png"
+							src=@user.image
 							width=100>
 						<h4>@user.name</h4>
 						<div class="btn-group">
