--- a/app/views/vote.scala.html
+++ b/app/views/vote.scala.html
@@ -6,19 +6,19 @@
 	<h2>Vote for other users</h2>
 	<p>
 		Look at other users' profile pictures and vote for those that stand
-		out from the rest. Choose from: Professional Model
+		out from the rest. Choose from: Fashionista
 		<img
-			src="http://openclipart.org/people/Gerald_G/Gerald_G_Yoga_Poses_(stylized).svg"
+			src="https://playfoursquare.s3.amazonaws.com/badge/57/bravo_fashionista.png"
 			width="40">
-		, Red Hot
+		, Photogenic
 		<img
-			src="http://investmentnewsnow.com/wp-content/uploads/2012/05/hot-icon.gif"
-			width="60"> 
+			src="https://playfoursquare.s3.amazonaws.com/badge/57/photogenic.png"
+			width="40"> 
 		and
 		Creativity Overflow 
 		<img
-			src="http://www.vectorstock.com/i/composite/06,57/idea-and-creative-abstract-human-icon-vector-790657.jpg"
-			width="50">.
+			src="https://playfoursquare.s3.amazonaws.com/badge/57/sxsw2010_panel_nerd.png"
+			width="40">.
 	</p>
 </div>
 <div class="container">
@@ -33,24 +33,23 @@
 							width=70 /> <br> @user.name
 						<div class="btn-toolbar">
 							<div class="btn-group">
-								<button class="btn btn-mini">
+								<button type="button" class="btn btn-mini" data-toggle="button">
 									<img
-										src="http://openclipart.org/people/Gerald_G/Gerald_G_Yoga_Poses_(stylized).svg"
+										src="https://playfoursquare.s3.amazonaws.com/badge/57/bravo_fashionista.png"
 										width="20">
 								</button>
 
-								<button class="btn btn-mini">
+								<button type="button" class="btn btn-mini" data-toggle="button">
 									<img
-										src="http://investmentnewsnow.com/wp-content/uploads/2012/05/hot-icon.gif"
-										width="28">
+										src="https://playfoursquare.s3.amazonaws.com/badge/57/photogenic.png"
+										width="20">
 								</button>
 
-								<button class="btn btn-mini">
+								<button type="button" class="btn btn-mini" data-toggle="button">
 									<img
-										src="http://www.vectorstock.com/i/composite/06,57/idea-and-creative-abstract-human-icon-vector-790657.jpg"
-										width="22">
+										src="https://playfoursquare.s3.amazonaws.com/badge/57/sxsw2010_panel_nerd.png"
+										width="20">
 								</button>
-								<i class="icon-search"></i>
 							</div>
 						</div>
 
