change the vote page to point to local icons

--- a/app/views/vote.scala.html
+++ b/app/views/vote.scala.html
@@ -8,16 +8,16 @@
 		Look at other users' profile pictures and vote for those that stand
 		out from the rest. Choose from: Fashionista
 		<img
-			src="https://playfoursquare.s3.amazonaws.com/badge/57/bravo_fashionista.png"
+			src="/assets/images/icons/fashionista_icon.png"
 			width="40">
 		, Photogenic
 		<img
-			src="https://playfoursquare.s3.amazonaws.com/badge/57/photogenic.png"
+			src="/assets/images/icons/photogenic_icon.png"
 			width="40"> 
 		and
 		Creativity Overflow 
 		<img
-			src="https://playfoursquare.s3.amazonaws.com/badge/57/sxsw2010_panel_nerd.png"
+			src="/assets/images/icons/nerd_icon.png"
 			width="40">.
 	</p>
 </div>
@@ -29,25 +29,25 @@
 				<center>
 					<div class="span2">
 						<img
-							src="@user.image"
-							width=70 /> <br> @user.name
+							src= "@user.image"
+							 /> <br> @user.name
 						<div class="btn-toolbar">
 							<div class="btn-group">
 								<button type="button" class="btn btn-mini" data-toggle="button">
 									<img
-										src="https://playfoursquare.s3.amazonaws.com/badge/57/bravo_fashionista.png"
+										src="/assets/images/icons/fashionista_icon.png"
 										width="20">
 								</button>
 
 								<button type="button" class="btn btn-mini" data-toggle="button">
 									<img
-										src="https://playfoursquare.s3.amazonaws.com/badge/57/photogenic.png"
+										src="/assets/images/icons/photogenic_icon.png"
 										width="20">
 								</button>
 
 								<button type="button" class="btn btn-mini" data-toggle="button">
 									<img
-										src="https://playfoursquare.s3.amazonaws.com/badge/57/sxsw2010_panel_nerd.png"
+										src="/assets/images/icons/nerd_icon.png"
 										width="20">
 								</button>
 							</div>
