improved the views

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -32,10 +32,9 @@ body {
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="/">Flavour of the Month</a>
+          <a class="brand" href="/">Eventually Friends</a>
           <div class="nav-collapse">
             <ul class="nav">
-              <li><a href="@routes.Application.index()">Home</a></li>
               <li><a href="@routes.Application.myProfile()">Profile</a></li>
               <li><a href="@routes.Application.getMatches()">View Matches</a></li>
               <li><a href="@routes.Application.requests()">Requests</a></li>
