--- a/app/views/vote.scala.html
+++ b/app/views/vote.scala.html
@@ -2,6 +2,7 @@
 <style type="text/css">
 </style>
 
+<div class="container-fluid">
 <div class="hero-unit">
 	<h2>Vote for other users</h2>
 	<p>
@@ -20,6 +21,7 @@
 			src="/assets/images/icons/nerd_icon.png"
 			width="40">.
 	</p>
+</div>
 </div>
 <div class="container">
 	<div class="row">
