--- a/app/views/viewMatches.scala.html
+++ b/app/views/viewMatches.scala.html
@@ -9,11 +9,13 @@
 </style>
 
 
+<div class="container-fluid">
 <div class="hero-unit">
 	<h2>View Matches:</h2>
 	<p>Every 3 days, you will be able to see 10 new matches. Select 3
 		people to have a short video chat with to know them better. Start
 		making new friends now!</p>
+</div>
 </div>
 
 
@@ -23,15 +25,14 @@
 			<div class="span10 offset1">
 				<div class="row">
 					@for(user <- users){
-					<div class="span2" id="matches">
+					<div class="span5" id="matches">
 						<center>
-							<a href="@routes.Application.viewProfile(user.name)"> <img src=@user.image width=150 />
+							<a href="@routes.Application.viewProfile(user.email)"> <img src=@user.image width=250 />
 							</a>
 							<h4></h4>
-							<button id="button" type=submit class="btn btn-primary btn-small">
-								Chat with
-								<h5>@user.name</h5>
-							</button>
+							<a href="#"><button id="button" type="submit" class="btn btn-mini">
+								<strong>Send request to @user.name</strong>
+							</button></a>
 						</center>
 					</div>
 					}
@@ -40,6 +41,4 @@
 		</div>
 	</center>
 </div>
-
-<br>
 }
