edited request view

--- a/app/views/requests.scala.html
+++ b/app/views/requests.scala.html
@@ -7,6 +7,7 @@
 			accept or reject their request.</p>
 	</div>
 </div>
+
 <div class="row">
 	<div class="span10 offset1">
 		<div class="row">
@@ -14,10 +15,11 @@
 			<center>
 				<div class="span2 offset1">
 					<center>
-						<a href="@routes.Application.viewProfile(user.email)"> <img
-							src=@user.image width=100>
-						</a>
+						<a href="@routes.Application.viewProfile(user.email)"> <img src=@user.image width=100 />
+							</a>
+
 						<h4>@user.name</h4>
+
 						<div class="btn-group">
 							<a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
 								Respond to request <span class="caret"></span>
