Fixed login box bug

--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -26,14 +26,14 @@
 <div class="clearfix">  
     <label for="username">Username</label>  
 	<div class="input"> 
-    <input type="email" autofocus="autofocus" name="email" placeholder="Email" value="@form("email").value>
-  	</div>
+    <input type="email" autofocus="autofocus" name="email" placeholder="Email" value="@form("email").value"
+      </div>
 </div>  
 
 <div class="clearfix">  
     <label for="password">Password</label>  
 	<div class="input">
-    	<input name="password" type="password" placeholder="Password">  
+    	  <input name="password" type="password" placeholder="Password">  
   	</div>
 </div>
   
@@ -43,10 +43,6 @@
 <fieldset>	
 
   <div class="actions"><input class="btn primary" name="commit" value="Log in" type="submit"></div>  
-
-
-<!-- &copy; ACM5PT 2011: Carlos Andreu, Richard Kaufman, Gabriel Perez, Daniel Gonzalez, Francisco De La Cruz -->
-
 	
 </fieldset></div> <!--end container-->
 
