created new views, updated old views
send_request (when click send request on view matches page)
upload video (when click accept request on requests page)
chat (replaced with view video, for users to see video messages)

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -39,7 +39,7 @@ body {
               <li><a href="@routes.Application.getMatches()">View Matches</a></li>
               <li><a href="@routes.Application.requests()">Requests</a></li>
               <li><a href="@routes.Application.vote()">Vote</a></li>
-              <li><a href="@routes.Application.chat()">Chat</a></li>
+              <li><a href="@routes.Application.viewVideos()">Chat</a></li>
               <li><a href="@routes.Application.signup()">Sign up</a></li>
               <li><a href="@routes.Application.login()">Login</a></li>
             </ul>
