--- a/app/views/myProfile.scala.html
+++ b/app/views/myProfile.scala.html
@@ -20,7 +20,7 @@
 			<div class="span5 offset1">
 				<h2>About myself</h2>
 				<p>@user.description</p>
-				<a href="#" class="pull-right">edit my profile</a>
+				<!-- <a href="#" class="pull-right">edit my profile</a> -->
 			</div>
 
 		</div>
