--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -32,7 +32,7 @@ body {
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="/">Eventually Friends</a>
+          <a class="brand" href="/">Honest Meet</a>
           <div class="nav-collapse">
             <ul class="nav">
               <li><a href="@routes.Application.myProfile()">Profile</a></li>
