--- a/app/views/vote.scala.html
+++ b/app/views/vote.scala.html
@@ -30,9 +30,10 @@
 				@for(user <- users){
 				<center>
 					<div class="span2">
-						<img
+						<img 
 							src= "@user.image"
 							 /> <br> @user.name
+							 <br> @user.location, @user.age
 						<div class="btn-toolbar">
 							<div class="btn-group">
 								<button type="button" class="btn btn-mini" data-toggle="button">
