Login actually means something. Updated main page again

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -4,7 +4,7 @@
 
 
 <div class="hero-unit">
-	<h2>Meet the one at Honest Meet</h2>
+	<h1>Meet <em>The One</em> at Honest Meet</h1>
 	<p>Honest meet helps people to make new friends online.
 		Although social media has developed tremendously, they mostly focus on
 		maintaining existing friendships, keeping in touch. Eventually friends
