--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -35,11 +35,11 @@ body {
           <a class="brand" href="/">Honest Meet</a>
           <div class="nav-collapse">
             <ul class="nav">
-              <li><a href="@routes.Application.myProfile()">Profile</a></li>
-              <li><a href="@routes.Application.getMatches()">View Matches</a></li>
-              <li><a href="@routes.Application.requests()">Requests</a></li>
-              <li><a href="@routes.Application.vote()">Vote</a></li>
-              <li><a href="@routes.Application.viewVideos()">Chat</a></li>
+              <li><a href="@routes.Matches.myProfile()">Profile</a></li>
+              <li><a href="@routes.Matches.getMatches()">View Matches</a></li>
+              <li><a href="@routes.Matches.requests()">Requests</a></li>
+              <li><a href="@routes.Matches.vote()">Vote</a></li>
+              <li><a href="@routes.Matches.viewVideos()">Chat</a></li>
               <li><a href="@routes.Application.signup()">Sign up</a></li>
               <li><a href="@routes.Application.login()">Login</a></li>
             </ul>
