Login works beatifully

--- a/app/views/sendRequest.scala.html
+++ b/app/views/sendRequest.scala.html
@@ -1,4 +1,4 @@
-@(user: User) @main("Flavour of the Month") {
+@(user: User) @loggedmain("Flavour of the Month") {
 
 <div class="container-fluid">
 	<div class="hero-unit">
