--- a/app/views/viewVideos.scala.html
+++ b/app/views/viewVideos.scala.html
@@ -1,4 +1,4 @@
-@(videos: List[String]) @main("Flavour of the Month") {
+@(videos: List[String]) @loggedmain("Flavour of the Month") {
 
 <div class="container-fluid">
 	<div class="hero-unit">
