--- a/app/views/myProfile.scala.html
+++ b/app/views/myProfile.scala.html
@@ -1,4 +1,4 @@
-@(user: User) @main("Flavour of the Month") {
+@(user: User) @loggedmain("Flavour of the Month") {
 
 <!-- Main hero unit for a primary marketing message or call to action -->
 <div class="container-fluid">
