--- a/app/views/requests.scala.html
+++ b/app/views/requests.scala.html
@@ -1,4 +1,4 @@
-@(users: List[User]) @main("Flavour of the Month") {
+@(users: List[User]) @loggedmain("Flavour of the Month") {
 
 <div class="container-fluid">
 	<div class="hero-unit">
